--- a/frontend/src/components/GlobalStyles/GlobalStyles.css
+++ b/frontend/src/components/GlobalStyles/GlobalStyles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --primary-color: #6a42c6;
+    --primary-color: #00b286;
     --linear-color: linear-gradient(to bottom,#ffa330,#ff9346,#ff8559,#fb7a6a,#f07379);
     --linear-button-color: linear-gradient(180deg,#5690FF 0,#3271E6 100%);
 }
@@ -39,13 +39,13 @@ body {
   }
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: var(--linear-button-color); 
+    background: #95e4cf; 
     border-radius: 15px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: var(--primary-color); 
+    background: #95e4cf; 
   }
   .scale-up-hor-right {
     -webkit-animation: scale-up-hor-right 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
